# siting-regulatory-radar

./: .env.example  .gitignore  1-prepare-chatgpt-document-batches.bat  2-import-chatgpt-document-results.bat  3-prepare-chatgpt-county-batches.bat  4-import-and-publish-chatgpt-backfill.bat  ARCHITECTURE.md  CHATGPT-BACKFILL-MANIFEST.txt  CHATGPT-PRO-BACKFILL-README.txt  DEEP-INTELLIGENCE-UPGRADE.txt  FINAL-CLEANUP-MANIFEST.txt  FINAL-CLEANUP-README.txt  HOTFIX-MANIFEST.sha256  QUICKSTART.txt  README.md  UNATTENDED-RATE-LIMIT-HOTFIX.txt  UPGRADE-MANIFEST.txt  apply-final-cleanup-patch.bat  apply-final-cleanup-patch.py  check-chatgpt-backfill.bat  check-deep-rebuild.bat  check-progress.bat  check-progress.py  crawl-only.bat  deep-rebuild-intelligence.bat  discover-sources-only.bat  final-cleanup-and-republish.bat  open-chatgpt-backfill-folder.bat  pyproject.toml  retry-deep-errors.bat  run-tests.bat  setup.bat  start-dashboard.bat  update-now.bat  watch-deep-rebuild.bat
.github/workflows/: daily-update.yml  test.yml
scripts/: setup.ps1
site/: app.js  index.html  styles.css
site/data/: coverage.json  dashboard.json  history.json  map.json  meta.json  signals.json
site/exports/: county-risk.csv  signals.csv
src/countywatch/: __init__.py  analyzer.py  chatgpt_backfill.py  cli.py  config.py  db.py  deep_rebuild.py  directory.py  discovery.py  exporter.py  extract.py  http.py  (+9 more)
tests/: test_analyzer.py  test_db_export.py  test_deep_rebuild.py  test_directory.py  test_extract.py  test_platforms.py  test_prefilter.py  test_scoring.py  test_security_and_pipeline.py
(+7 files in other folders)
